# hoopi-pedal

firmware/daisy/: .gitignore  LICENSE.md  Makefile  README.md  audio_config.cpp  audio_config.h  build.sh  controls.cpp  controls.h  effects_config.json  generate_effects_config.py  hoopi.cpp  hoopi.h  hoopi_pedal.cpp  hoopi_pedal.h  increment_version.sh  nam_models.cpp  nam_models.h  ota.cpp  ota.h  pin_defs.h  program-dfu.sh  uart_commands.cpp  uart_commands.h  uart_protocol.cpp  uart_protocol.h
firmware/daisy/docs/: audio-processing.md  cleanup-log.md  effect-defaults.md  effects-overview.md  guitar-effects.md  reverb-effects.md  uart-param-config.md  uart-v2-implementation.md
firmware/daisy/effects/: amp_module.cpp  amp_module.h  ampsim.h  base_effect_module.cpp  base_effect_module.h  chorus.h  chorus_module.cpp  chorus_module.h  cloudseed_module.cpp  cloudseed_module.h  cloudseed_reverb.h  delay.h  delay_module.cpp  delay_module.h  distortion.h  distortion_module.cpp  distortion_module.h  galaxy.h  galaxy_lite.h  galaxy_reverb_module.cpp  galaxy_reverb_module.h  input_processing.cpp  input_processing.h  linear_change.h  looper.h  looper_module.cpp  looper_module.h  nam.h  nam_module.cpp  nam_module.h  nam_wavenet.cpp  nam_wavenet.h  output_processing.h  tremolo.h  tremolo_module.cpp  tremolo_module.h
firmware/daisy/include/: hoopi_hw.h
firmware/esp32/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
firmware/esp32/main/: CMakeLists.txt  daisy.h  format_wav.h  hoopi.cpp  nvs.h  playback.h  sdcard.h  server.h  uart.h  wifi_utils.h
(+24 files in other folders)
